Add support for NeoDev 1.21.10.